idea/testData/checkerWithErrorTypes/full/regression/Jet169.jet
fun set(key : String, value : String) {
  val a : String? = ""
  when (a) {
    "" => a<!UNSAFE_CALL!>.<!>get(0)
    is String, is Any => a.compareTo("")
    else => a.toString()
  }
}
